center align fixed in hero / footer responsiveness

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -32,7 +32,7 @@
 .hero-text{
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 0.5rem;
   text-transform: uppercase;
   font-size: 4.5rem;
   font-weight: bold;
@@ -170,6 +170,11 @@
 .goals>div>:nth-child(2){
   color: white;
   font-size: 1.5rem;
+}
+
+.hero-subtext {
+  color: white;
+  align-items: center;
 }
 
 
